--- a/app/views/principal/home.html.erb
+++ b/app/views/principal/home.html.erb
@@ -1,4 +1,4 @@
-<% @publications.each do |publication|%>
+<% @publicaciones.each do |publication|%>
     <div class="row center-xs">
         <div class="col-xs-12 col-lg-6">
             <div class="card borde-radio-8">
