--- a/app/views/publications/index.html.erb
+++ b/app/views/publications/index.html.erb
@@ -22,7 +22,7 @@
                     </section>
                     <span class="card-title verdeBri-text left-align"><%=publication.titulo%></span>
                     <span class="new badge" data-badge-caption="Grupo"><%= publication.group.codigo %></span>
-                    <% link_to "ver detalles" , publication.material.pdf.url ,, class:'btn-floating btn-small green' %>
+                    <% link_to "ver detalles" , publication.material.pdf.url , class:'btn-floating btn-small green' %>
                     <p class="left-align">
                         <%= publication.descripcion%>
                     </p>
