--- a/app/assets/stylesheets/principal.scss
+++ b/app/assets/stylesheets/principal.scss
@@ -97,22 +97,24 @@ body {
     font-family: 'Roboto Regular';
 }
 
-$fuentes :( roboto-1: "Roboto Thin",
-roboto-2: "Roboto Thin Italic",
-roboto-3: "Roboto Light",
-roboto-4: "Roboto Light Italic",
-roboto-5: "Roboto Regular",
-roboto-6: "Roboto Italic",
-roboto-7: "Roboto Medium",
-roboto-8: "Roboto Medium Italic",
-roboto-9: "Roboto Bold",
-roboto-10: "Roboto Bold Italic",
-roboto-11: "Roboto Black",
-roboto-12: "Roboto Black Italic");
-@each $fuente_name,
-$fuente in $fuentes {
+$fuentes: (
+"robotoT": "Roboto Thin",
+"robotoTI": "Roboto Thin Italic",
+"robotoL": "Roboto Light",
+"robotoLI": "Roboto Light Italic",
+"robotoR": "Roboto Regular",
+"robotoI": "Roboto Italic",
+"robotoM": "Roboto Medium",
+"robotoMI": "Roboto Medium Italic",
+"robotoB": "Roboto Bold",
+"robotoBI": "Roboto Bold Italic",
+"robotoBlack": "Roboto Black",
+"robotoBlackI": "Roboto Black Italic"
+);
+
+@each $fuente_name,$fuente in $fuentes {
     .#{$fuente_name} {
-        font-family: $fuente;
+        font-family: $fuente !important;
     }
 }
 
@@ -148,14 +150,12 @@ $fuente in $fuentes {
 }
 
 .fondo-login {
-    background-image: url(#{asset_path('reserva2.jpg')
-}
-
-);
-background-size:cover;
-background-repeat: none;
+    background-image: url(#{asset_path('reserva2.jpg')});
+    background-size:cover;
+    background-repeat: none;
 
 }
+
 .margen-boton {
     margin: 5;
 }
@@ -174,37 +174,67 @@ background-repeat: none;
     .borde-radio-#{$i} {
         border-radius: #{$i}px;
     }
-    
+
     .borde-radio-top-#{$i} {
         border-radius: #{$i}px #{$i}px 0px 0px;
     }
-    
+
     .borde-radio-buton-#{$i} {
         border-radius: 0px 0px #{$i}px #{$i}px;
     }
-    
+//margin
     .margin-#{$i} {
         margin: #{$i}px;
     }
-    
-    .padding-#{$i} {
-        padding: #{$i}px;
+//margin vertical
+    .margin-vertical-#{$i} {
+        margin-top: #{$i}px;
+        margin-bottom: #{$i}px;
     }
-    
+//margin horizontal
+    .margin-horizontal-#{$i} {
+        margin-left: #{$i}px;
+        margin-right: #{$i}px;
+    }
+//margin top
+    .margin-top-#{$i} {
+        margin-top: #{$i}px;
+    }
+//marging bottom
+    .margin-bottom-#{$i} {
+        margin-bottom: #{$i}px !important;
+    }
+//margin margin-left
+    .margin-left-#{$i} {
+        margin-left: #{$i}px;
+    }
+//margin right
+    .margin-right-#{$i} {
+        margin-right: #{$i}px;
+    }
+//pading
+    .padding-#{$i} {
+        padding: #{$i}px !important;
+    }
+
     .padding-horizontal-#{$i} {
         padding-left: #{$i}px;
         padding-right: #{$i}px;
     }
-    
+
     .padding-vertical-#{$i} {
         padding-top: #{$i}px;
         padding-bottom: #{$i}px;
     }
-    
+
     .text-#{$i} {
         font-size: #{$i}px !important;
     }
 }
+
+// .col-xs-12 > .btn {
+//   width: 100%;
+// }
 //siclo de ayuda hasta el 1000/mil
 @for $i from 1 through 1000 {
     .ancho-#{$i} {
