--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,8 @@
   <head>
     <title>GranComision</title>
     <%= csrf_meta_tags %>
+
+
     <!-- <link rel="stylesheet" href="https://unpkg.com/materialize-stepper@3.0.1/dist/css/mstepper.min.css"> -->
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <!-- <script src="https://unpkg.com/materialize-stepper@3.0.1/dist/js/mstepper.min.js"> </script> -->
@@ -121,7 +123,7 @@
 
 
     <%= yield %>
-    
+
 <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.5.1/min/dropzone.min.js"></script>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js"></script>
@@ -144,21 +146,21 @@
     </script>
   </body>
   <script>
-     document.addEventListener('turbolinks:load', function() {
-        M.AutoInit();
-      elem = document.querySelector('#slide-out');
-      instance = new M.Sidenav(elem, {});
-      $(".dropdown-trigger").dropdown({  });
-
-    });
-    document.addEventListener('turbolinks:before-cache', () => {
-      M.AutoInit();
-      const elem = document.querySelector('#slide-out');
-      const instance = M.Sidenav.getInstance(elem);
-      if (instance) {
-        instance.destroy();
-      }
-    });
+    //  document.addEventListener('turbolinks:load', function() {
+    //     M.AutoInit();
+    //   elem = document.querySelector('#slide-out');
+    //   instance = new M.Sidenav(elem, {});
+    //   $(".dropdown-trigger").dropdown({  });
+    //
+    // });
+    // document.addEventListener('turbolinks:before-cache', () => {
+    //   M.AutoInit();
+    //   const elem = document.querySelector('#slide-out');
+    //   const instance = M.Sidenav.getInstance(elem);
+    //   if (instance) {
+    //     instance.destroy();
+    //   }
+    // });
 
     // //---------------------------------------------------------------
     // //al cargar la pagina, y al volverla a cargar luego de navegar hacia ella
